# coding_team

./: README.md  pyproject.toml  report.md
src/coding_team/: crew.py  main.py
src/coding_team/config/: agents.yaml  tasks.yaml
